syntax="proto3";
package edgepb;
option go_package="./edgepb";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


service EdgeRpc {
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc CreateCollection(Collection) returns (CollectionResponse) {}
    rpc DeleteCollection(CollectionName) returns (DeleteCollectionResponse) {}
    rpc GetCollection(CollectionName) returns (CollectionDetail) {}

    rpc LoadCollection(CollectionName) returns (CollectionDetail) {}
    rpc ReleaseCollection(CollectionName) returns (Response) {}
    rpc Flush(CollectionName) returns (Response) {}

    rpc Index(IndexChange) returns (Response) {}
    rpc Search(SearchIndex) returns (SearchResponse) {}
}

message CollectionName {
    string collection_name=1;
    bool with_size=2;
}

message Collection {
    string collection_name=1;
    repeated Index index=2;
    Distance distance=3;
    Quantization quantization=4;
    uint32 dim=5;
    bool versioning=6;
}

message CollectionResponse {
    Collection collection=1;
    bool status=2;
    Error error=3;
}

message Index {
    string index_name=1;
    IndexType index_type=2;
    bool enable_null=3;
    bool primary_key=4;
}

enum IndexType {
    String = 0;
    Integer = 1;
    Float = 2;
    Boolean = 3;
}

message Response {
    bool status=1;
    Error error=2;
}


message Error {
    string error_message=1;
    ErrorCode error_code=2;
}


enum Distance {
    Cosine=0;
    Euclidean=1;
}

enum Quantization {
    None=0;
    F16=1;
    F8=2;
    BF16=3;
}

message DeleteCollectionResponse {
    bool status=1;
    Error error=2;
}

enum ErrorCode {
    UNDEFINED=0; // check error message
    RPC_ERROR=1;
    COMMUNICATION_SHARD_RPC_ERROR=2;
    COMMUNICATION_SHARD_ERROR=3;
    MARSHAL_ERROR=4;
    INTERNAL_FUNC_ERROR=5;
}

message CollectionDetail {
    Collection collection=1;
    uint32 collection_size=2;
    uint64 collection_memory=3;
    bool load = 4;
    bool status=5;
    Error error=6;
}

message IndexChange {
    string collection_name=1;
    string primary_key=2;
    google.protobuf.Struct metadata=3;
    repeated float vectors=4;
    IndexChagedType changed=5;
}

enum IndexChagedType {
    //Insert Or Update
    CHANGED = 0;
    DELETE = 1;
}

message SearchIndex {
    string collection_name=1;
    repeated float vector=2;
    uint64 offset=3;
    uint64 limit=4;
    FilterExpression filter_expression = 5;
    bool high_resource_avaliable=6;
}

message SearchFilter {
    string index_name=1;
    Op op=2;
    oneof value {
        string string_val = 3;
        int64 int_val = 4;
        double float_val = 5;
        bool bool_val = 6;
    }
}

enum LogicalOperator {
    AND = 0;
    OR = 1;
}

message FilterExpression {
    oneof expr {
      SearchFilter filter = 1;
      CompositeFilter composite = 2;
    }
  }
  
  message CompositeFilter {
    LogicalOperator op = 1;
    repeated FilterExpression expressions = 2;
  }


enum Op {
    EQ = 0; // equal  == 
    NEQ = 1; // Not Equal !=
    GT = 2; // greater than >
    GTE = 3; // =>
    LT = 4; //less than <
    LTE = 5; // <=
}

message SearchResponse {
    bool status = 1;
    Error error=2;
    repeated Candidates candidates=3;
}

message Candidates {
    google.protobuf.Struct metadata = 1;
    float score=2;
}